--- a/.github/workflows/terraform_aws.yml
+++ b/.github/workflows/terraform_aws.yml
@@ -96,13 +96,13 @@ jobs:
     - name: Plan Terraform
       run: |
         cd ./terraform/aws  # Change directory to the Terraform configuration folder
-        variables.auto.tfvars
+        cat variables.auto.tfvars
         terraform plan
 
     - name: Apply Terraform
       run: |
         cd ./terraform/aws  # Change directory to the Terraform configuration folder
-        variables.auto.tfvars
+        cat variables.auto.tfvars
         terraform apply -auto-approve
 
     - name: Destroy Terraform
